web/wp-content/themes/cncf-twenty-two/source/scss/components/_front-page.scss
/* ... */
.home-ambassadors {
	text-align: center;
	margin-bottom: 60px;
	@media (min-width: 800px) {
		margin-bottom: 20px;
		text-align: left;
		display: grid;
		grid-column-gap: 40px;
		grid-template-areas:
			'text ambassadors'
			'cta ambassadors';
		grid-template-columns: 2fr 3fr;
		grid-template-rows: 1fr 1fr;
		&__text-wrapper {
			grid-area: text;
			// Move text down from top.
			padding-top: 40px;
			@media (min-width: 1200px) {
				padding-top: 60px;
			}
		}
		&__text {
			max-width: 85%;
		}
		&__cta {
			grid-area: cta;
			padding-top: 50px;
		}
	}
	@media (min-width: 1000px) {
		margin-bottom: 0;
	}
	&-heptagons {
		margin-top: 20px;
		margin-bottom: 20px;

		display: grid;
		grid-template-columns: repeat(12, 1fr);
		grid-template-rows: repeat(18, 1fr);
		grid-column-gap: 0;
		grid-row-gap: 0;
		position: relative;
		@media (min-width: 800px) {
			grid-area: ambassadors;
			max-height: 550px;
		}
		&__sm01 {
			position: absolute;
			top: -10px;
			left: 10%;
			width: 20px;
			height: 20px;
			color: #ebffe9;
			@media (min-width: 1000px) {
				width: 40px;
				height: 40px;
				top: 100%;
				left: 72%;
			}
		}
		&__sm02 {
			position: absolute;
			top: 5%;
			left: 50%;
			width: 22px;
			height: 22px;
			color: #b9baec;
			@media (min-width: 1000px) {
				width: 40px;
				height: 40px;
				top: 1%;
				left: 49%;
			}
		}
		&__sm03 {
			position: absolute;
			top: 42%;
			left: 7%;
			width: 22px;
			height: 22px;
			color: #fddaf0;
			@media (min-width: 1000px) {
				width: 40px;
				height: 40px;
				top: 65%;
				left: 3%;
			}
		}
		&__sm04 {
			position: absolute;
			top: 46%;
			left: 39%;
			width: 20px;
			height: 20px;
			color: #feedcc;
			@media (min-width: 1000px) {
				width: 40px;
				height: 40px;
				top: 12%;
				left: 5%;
			}
		}
		&__sm05 {
			position: absolute;
			top: 80%;
			left: 8%;
			width: 22px;
			height: 22px;
			color: #ccf5ff;
			@media (min-width: 1000px) {
				width: 40px;
				height: 40px;
				top: 35%;
				left: 50%;
			}
		}
		&__sm06 {
			position: absolute;
			top: 92%;
			left: 44%;
			width: 22px;
			height: 22px;
			color: #ebfdf8;
			@media (min-width: 1000px) {
				width: 40px;
				height: 40px;
				top: 40%;
				left: 85%;
			}
			@media (min-width: 1200px) {
				top: 45%;
				left: 88%;
			}
		}
		&__lg01 {
			grid-row-start: 1;
			grid-row-end: 6;
			grid-column-start: 8;
			grid-column-end: 12;
			@media (min-width: 1000px) {
				grid-row-start: 1;
				grid-row-end: 5;
				grid-column-start: 9;
				grid-column-end: 13;
			}
		}
		&__lg02 {
			grid-row-start: 6;
			grid-row-end: 12;
			grid-column-start: 7;
			grid-column-end: 13;
			@media (min-width: 800px) {
				grid-row-start: 7;
				grid-row-end: 9;
				grid-column-start: 7;
				grid-column-end: 11;
			}
			@media (min-width: 1000px) {
				grid-row-start: 3;
				grid-row-end: 5;
				grid-column-start: 4;
				grid-column-end: 7;
			}
			@media (min-width: 1200px) {
				grid-row-start: 3;
				grid-row-end: 5;
				grid-column-start: 4;
				grid-column-end: 6;
			}
		}
		&__lg03 {
			grid-row-start: 11;
			grid-row-end: 16;
			grid-column-start: 2;
			grid-column-end: 7;
			@media (min-width: 1000px) {
				grid-row-start: 7;
				grid-row-end: 13;
				grid-column-start: 1;
				grid-column-end: 4;
			}
		}
		&__lg04 {
			grid-row-start: 14;
			grid-row-end: 21;
			grid-column-start: 7;
			grid-column-end: 13;
			@media (min-width: 1000px) {
				grid-row-start: 13;
				grid-row-end: 20;
				grid-column-start: 10;
				grid-column-end: 13;
			}
		}
		// Priyanka.
		&__lg05 {
			grid-row-start: 2;
			grid-row-end: 9;
			grid-column-start: 1;
			grid-column-end: 7;
			@media (min-width: 1000px) {
				grid-row-start: 12;
				grid-row-end: 21;
				grid-column-start: 3;
				grid-column-end: 8;
			}
			@media (min-width: 1200px) {
				grid-row-start: 11;
				grid-row-end: 21;
				grid-column-start: 4;
				grid-column-end: 9;
			}
		}
		&__link {
			display: block;
			width: 100%; // 100% and rely on grid pattern?
			@media (min-width: 800px) and (max-width: 999px) {
				max-width: 160px;
			}
			height: auto;
			aspect-ratio: 1/1;
			filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.1));
		}
		&__image {
			clip-path: url(#heptagon);
			object-fit: cover;
			aspect-ratio: 1/1;
			min-width: 100%;
			min-height: 100%;
			// Safari.
			height: 100%;
			width: 100%;
		}
	}
}

.hide-svg {
	position: absolute;
	width: 0;
	height: 0;
}

.fade-in {
	transition: opacity 0.4s ease-out;
	opacity: 0;
}

.fade-out {
	transition: opacity 0.4s ease-in;
	opacity: 1;
}
/* ... */

